--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.irfanirawansukirman.movie.presentation.movies.MoviesActivity">
+        <activity android:name="com.irfanirawansukirman.movie.presentation.moviesfavorite.MoviesFavoriteActivity" />
+        <activity android:name="com.irfanirawansukirman.movie.presentation.moviedetail.MovieDetailActivity" />
+        <activity android:name="com.irfanirawansukirman.movie.presentation.movies.MoviesActivity" />
+
+        <activity android:name="com.irfanirawansukirman.news.presentation.newscategories.NewsCategoriesActivity" />
+        <activity android:name="com.irfanirawansukirman.news.presentation.news.NewsActivity" />
+
+        <activity android:name="com.irfanirawansukirman.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
