--- a/core/build.gradle
+++ b/core/build.gradle
@@ -47,10 +47,10 @@ android {
 }
 
 dependencies {
-    api 'androidx.fragment:fragment-ktx:1.3.0'
-    api 'androidx.activity:activity-ktx:1.2.0'
-    api 'androidx.core:core-ktx:1.3.2'
-    api 'androidx.appcompat:appcompat:1.2.0'
+    api 'androidx.fragment:fragment-ktx:1.3.4'
+    api 'androidx.activity:activity-ktx:1.2.3'
+    api 'androidx.core:core-ktx:1.5.0'
+    api 'androidx.appcompat:appcompat:1.3.0'
     api 'com.google.android.material:material:1.3.0'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
 
@@ -59,21 +59,21 @@ dependencies {
     api "com.squareup.retrofit2:converter-moshi:2.9.0"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.11.0"
 
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
 
-    api 'com.google.dagger:dagger:2.29.1'
-    kapt 'com.google.dagger:dagger-compiler:2.29.1'
+    api 'com.google.dagger:dagger:2.36'
+    kapt 'com.google.dagger:dagger-compiler:2.33'
 
     api 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
-    api 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+    api 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     api "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    api 'androidx.lifecycle:lifecycle-common-java8:2.3.0'
-    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    api 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
+    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
