--- a/feature/movie/build.gradle
+++ b/feature/movie/build.gradle
@@ -56,16 +56,15 @@ dependencies {
     implementation project(":cache")
     implementation project(":network")
     implementation project(":core")
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    kapt 'com.google.dagger:dagger-compiler:2.29.1'
+    kapt 'com.google.dagger:dagger-compiler:2.33'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    testImplementation "io.mockk:mockk:1.10.5"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
+    testImplementation "io.mockk:mockk:1.11.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
