--- a/core/build.gradle
+++ b/core/build.gradle
@@ -73,7 +73,13 @@ dependencies {
     api 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
     api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testApi 'junit:junit:4.13.2'
+    testApi "io.mockk:mockk:1.11.0"
+    testApi 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+    testApi 'androidx.arch.core:core-testing:2.1.0'
+    androidTestApi 'androidx.test.ext:junit:1.1.2'
+    androidTestApi 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestApi 'androidx.test.espresso:espresso-intents:3.3.0'
+    androidTestApi 'androidx.test:runner:1.3.0'
+    androidTestApi 'androidx.test:rules:1.3.0'
 }
